Styling fix. Remove scrollbars on toolbar

--- a/static/webcopy-editor.css
+++ b/static/webcopy-editor.css
@@ -13,7 +13,7 @@ body {
 .toolbar {
     position: fixed;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
     max-height: 100%;
     padding: 4px;
     background: #d3d3d3;
